# nvtracker

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  main.cpp
configs/: dstest2_pgie_config.txt  dstest2_sgie1_config.txt  dstest2_sgie2_config.txt  dstest2_sgie3_config.txt  dstest2_tracker_config.txt
configs/deepstream-app/: source12_1080p_dec_infer-resnet_tracker_tiled_display_fp16_tx2.txt  source4_1080p_dec_infer-resnet_tracker_sgie_tiled_display_int8.txt
deploy/: run.sh
include/: tracker.h
scripts/: main.py  perform.py
src/: main.cpp  tracker.cpp
tracker/: CMakeLists.txt  test.cpp
tracker/include/detector/: YOLO11Seg.hpp
